[project]
name = "sellnance"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "skwnddp", email = "7883121@naver.com" }
]
requires-python = ">=3.13.13"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "python-binance>=1.0.36",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tradingview-datafeed>=2.1.1",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["."]
extraPaths = ["."]
